--- a/GummyBearWebParent/GummyBearBackEnd/bin/src/main/resources/templates/user_form.html
+++ b/GummyBearWebParent/GummyBearBackEnd/bin/src/main/resources/templates/user_form.html
@@ -56,7 +56,7 @@
 	
 	<br>
 	
-	<div>
+	<div class="container-fluid">
 		<h2> Manage Users | [[${pageTitile}]]</h2>
 	</div>
 
@@ -99,6 +99,13 @@
                 <input th:if="${user.id != null}" type="password" class="form-control" th:field="*{password}"  minlength="8" maxlength="20" />
             </div>
         </div>
+        
+        <!--  <div class="form-group row">
+            <label class="col-sm-4 col-form-label">Job Title: </label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" th:field="*{jobTitle}" required minlength="2"  />
+            </div>
+        </div>-->
         
          <div class="form-group row">
             <label class="col-sm-4 col-form-label">Working hours: </label>
