--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/login.html
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
 		</div>
 
 		<div class="border border-secondary rounded p-3">
-			<p>Access to Gummy Bear Admin Dashboard</p>
+			<p>Access to Gummy Bear Dashboard</p>
 			<p>
 				<input type="email" name="email" class="form-control" placeholder="E-mail" required/>
 			</p>
