Updated implementation of the calculateTimeDifference() function in the TimeController class and moved part of the code for user filtering to the TimeService class.

--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/timetracking.html
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/timetracking.html
@@ -97,7 +97,7 @@
 			</thead>
 			
 			<tbody>
-				<tr th:each="td : ${listTimeDifference}">
+				<tr th:each="td : ${timeDifference}">
 					<td th:text="${td.id}"></td>
 					<td th:text="${#calendars.format(td.startTime, 'yyyy/MM/dd HH:mm')}"></td>
 					<td th:text="${#calendars.format(td.endTime, 'yyyy/MM/dd HH:mm')}"></td>
