Added calculateTotalWorkingTime method to TimeService class to calculate total working time per user; updated TimeController class and timetracking.html to display total working time for user.

--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/timetracking.html
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/timetracking.html
@@ -86,6 +86,10 @@
 	</div>
 	
 	<div>
+		<h4 style= "color:grey; margin-left: 10px"> Total working time [hrs:mins:secs] [[${totalWorkingTime}]]</h4>
+	</div>
+	
+	<div>
 		<table class="table table-bordered table-striped table-hover table-responsive-xL">
 			<thead class="thead-dark">
 				<tr>
