--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/index.html
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/index.html
@@ -32,9 +32,11 @@
 						<li class="nav-item">
 							<a class="nav-link" th:href="@{/}">Home</a>
 						</li>
-						<li class="nav-item">
+						
+						<!-- <li class="nav-item">
 							<a class="nav-link" th:href="@{/timeoverview/}">Time Statement</a>
-						</li>
+						</li> -->
+						
 						<li class="nav-item">
 							<a class="nav-link" th:href="@{/timetracking/}">Time Tracking</a>
 						</li>
