--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/index.html
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/index.html
@@ -40,6 +40,11 @@
 						<li class="nav-item">
 							<a class="nav-link" th:href="@{/timetracking/}">Time Tracking</a>
 						</li>
+					</ul>
+				</div>
+				
+				<div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="topNavbar">
+					<ul class="navbar-nav ml-auto">
 						<li>
 							<span class="fas fa-user fa-2x icon-silver"> </span>
 						</li>
@@ -118,11 +123,6 @@
 			</div>
 		</div>
 	</div>
-
-	<div class="text-center">
-		<p> Copyright &copy; GummyBear </p>
-	</div>
-	
 	
 <!-- Logout/Jonas -->	
 <script type="text/javascript">
