--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/index.html
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				
-				<div class="collapse navbar-collapse" id="topNavbar">
+				<div class="collapse navbar-collapse w-100" id="topNavbar">
 					<ul class="navbar-nav">
 						<li class="nav-item">
 							<a class="nav-link" th:href="@{/}">Home</a>
