Minor updates in the comments for multiple methods.

--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/index.html
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/index.html
@@ -145,7 +145,7 @@
 </script>
 
 
-	
+	<!-- @author: Olga -->
 	<!-- reference: https://www.howtocodeschool.com/2020/05/display-current-date-and-time-using-html-javascript.html --> 
 	<!-- Display date and time --> 
 	<script>
